# cutie-ongoing-call

./: CMakeLists.txt  README.md
debian/: control
sounds/: sounds.qrc
src/: main.cpp
src/qml/: Call.qml  qml.qrc
